[project]
authors = [{ name = "evworth" }, { name = "rsnodgrass" }]
name = "hass-adtpulse"

description = "Home Assistant integration for ADT Pulse"
readme = "README.md"
requires-python = ">=3.14.3"
version = "0.7.2"

dependencies = ["homeassistant>=2026.3.0", "pyadtpulse>=1.2.14"]

[dependency-groups]
dev = ["commitizen>=4.8.3", "pre-commit>=4.3.0", "ruff>=0.12.9"]

[tool.uv]
required-version = ">=0.10.0"

[tool.ruff]
line-length = 88         # Matches black
show-fixes = true
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
line-ending = "auto"

[tool.ruff.lint]
ignore = [
    "D105",    #missing-docstring-in-init
    "PLR2004", #Magic Values
    "D203",    #no-blank-line-before-class
    "D212",    #multi-line-summary-first-line
]
select = [
    "I",   # isort
    "F",   # plake8-bugbear
    "E",   # pycoyflakes
    "W",
    "D",   # pydocstyle
    "PL",  # pylint
    "RUF", # ruff
    "UP",  # pyupgrade
]
[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
length-sort = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
